# Lesson_31_HW_Django

./: .gitignore  README.md  pyproject.toml
ad/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
ad/management/commands/: loadfixtures.py
ad/migrations/: 0001_initial.py  0002_initial.py  0003_alter_ad_is_published_alter_ad_name_alter_ad_price.py
avito/: settings.py  urls.py
category/: models.py  serializers.py  urls.py  views.py
category/migrations/: 0001_initial.py  0002_category_slug.py  0003_alter_category_slug.py  0004_alter_category_slug.py
fixtures/: ad.csv  category.csv  user.csv
location/: forms.py  models.py  views.py
location/migrations/: 0001_initial.py
postgresql/: docker-compose.yaml
selection/: models.py  permissions.py  serializers.py  urls.py
selection/migrations/: 0001_initial.py  0002_alter_selection_name.py  0003_alter_selection_name_alter_selection_unique_together.py  0004_alter_selection_owner.py
tests/: factories.py  fixtures.py
tests/ad/: ad_detail_test.py  ad_list_test.py
tests/selection/: selection_create_test.py
user/: forms.py  models.py  serializers.py  urls.py  validators.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_age.py  0003_alter_user_age.py  0004_alter_user_location.py  0005_user_birth_date_alter_user_email.py
